--- a/Web prpgram/main.css
+++ b/Web prpgram/main.css
@@ -1,5 +1,16 @@
 body {
-    color:#000000;
-    font-size:14px
+    background:#D3D3D3;
 }
-
+h1 {
+  color: rgb(0, 112, 187);
+  font-family: Arial;
+}
+div {
+  border: 8px solid #0066ff;
+  padding: 20px 80px;
+  background: #268555;
+  width: 100px;
+  border-radius: 45px;
+  -moz-box-shadow: 10px 10px 5px #888888; /* Old Firefox */
+  box-shadow: 10px 10px 5px #888888;
+}
